fix(url): resolve version numbers in URLs and fix Add by URL dialog layout and button positions